delete mongo dependency

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,6 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    depends_on:
-      - mongo
     environment:
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
       - SPOON_SECRET=${SPOON_SECRET}
@@ -15,18 +13,18 @@ services:
       - DATABASE=accounts
       - COLLECTION=users
 
-  mongo:
-    build: ./mongodb
-    container_name: mongodb
-    volumes:
-      - mongodb-data:/data/db
-    ports:
-      - "27017:27017"
-    environment:
-      - DATABASE=accounts
-      - COLLECTION=users
-      - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
-      - SPOON_SECRET=${SPOON_SECRET}
+  # mongo:
+  #   build: ./mongodb
+  #   container_name: mongodb
+  #   volumes:
+  #     - mongodb-data:/data/db
+  #   ports:
+  #     - "27017:27017"
+  #   environment:
+  #     - DATABASE=accounts
+  #     - COLLECTION=users
+  #     - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+  #     - SPOON_SECRET=${SPOON_SECRET}
 
 volumes:
   mongodb-data:
