--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -2,13 +2,18 @@ FROM python:3.10.3-slim-bullseye
 
 WORKDIR /app
 
+# Install dependencies
 COPY requirements.txt ./
-
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app
 
+# Make port 5000 available to the world outside this container
 EXPOSE 5000
 
-CMD ["python", "app.py"]
+# Define environment variable
+ENV NAME World
+
+# Run app.py when the container launches
+CMD ["python", "app.js"]
 
