--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -35,14 +35,14 @@ jobs:
       - name: Build and Push Web-App Docker Image
         run: |
           export DOCKER_BUILDKIT=1
-          docker build -t js11692/web_app:latest ./web_app
-          docker push js11692/web_app:latest
+          docker build -t js11692/gimme_recipes:latest ./web_app
+          docker push js11692/gimme_recipes:latest
 
 
-      - name: Build and Push MongoDB image (to Docker Hub)
-        run: |
-          docker build -f mongodb/Dockerfile -t js11692/mongodb:latest ./mongodb
-          docker push js11692/mongodb:latest
+      # - name: Build and Push MongoDB image (to Docker Hub)
+      #   run: |
+      #     docker build -f mongodb/Dockerfile -t js11692/mongodb:latest ./mongodb
+      #     docker push js11692/mongodb:latest
 
       - name: List files in the GitHub Actions workspace
         run: ls -alh $GITHUB_WORKSPACE
@@ -67,34 +67,50 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: ls -alh /root/var/www/gimmerecipes1/
       
-      - name: Clean up Docker environment
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.DIGITALOCEAN_DROPLET_IP }}
-          username: root
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            docker-compose -f /root/var/www/gimmerecipes1/docker-compose.yaml down --remove-orphans
-            docker system prune -af --volumes
+      # - name: Clean up Docker environment
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: ${{ secrets.DIGITALOCEAN_DROPLET_IP }}
+      #     username: root
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     script: |
+      #       docker-compose -f /root/var/www/gimmerecipes1/docker-compose.yaml down --remove-orphans
+      #       docker system prune -af --volumes
 
 
 
+      # - name: Deploy to Digital Ocean
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: ${{ secrets.DIGITALOCEAN_DROPLET_IP }}
+      #     username: root
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     script: |
+      #       export MONGO_URI="${{ secrets.MONGO_URI }}"
+      #       export SPOON_SECRET="${{ secrets.SPOON_SECRET }}"
+      #       export FLASK_SECRET_KEY="${{secrets.FLASK_SECRET_KEY}}"
+      #       cd /root/var/www/gimmerecipes1/
+      #       docker-compose pull
+      #       docker-compose down --remove-orphans
+      #       docker container prune -f
+      #       docker image prune -f
+      #       docker volume prune -f
+      #       docker-compose up -d
+      #       docker-compose logs
+      
       - name: Deploy to Digital Ocean
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.DIGITALOCEAN_DROPLET_IP }}
-          username: root
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ secrets.DIGITALOCEAN_HOST }}
+          username: ${{ secrets.DIGITALOCEAN_USERNAME }}
+          password: ${{ secrets.DIGITALOCEAN_PASSWORD }}
           script: |
             export MONGO_URI="${{ secrets.MONGO_URI }}"
             export SPOON_SECRET="${{ secrets.SPOON_SECRET }}"
             export FLASK_SECRET_KEY="${{secrets.FLASK_SECRET_KEY}}"
             cd /root/var/www/gimmerecipes1/
-            docker-compose pull
-            docker-compose down --remove-orphans
-            docker container prune -f
-            docker image prune -f
-            docker volume prune -f
-            docker-compose up -d
-            docker-compose logs
+            docker pull js11692/gimme_recipes:latest
+            docker stop flask-app || true
+            docker rm flask-app || true
+            docker run -d --name gimme_recipes -p 80:5000 js11692/gimme_recipes:latest
 
