--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -67,43 +67,12 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: ls -alh /root/var/www/gimmerecipes1/
       
-      # - name: Clean up Docker environment
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.DIGITALOCEAN_DROPLET_IP }}
-      #     username: root
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     script: |
-      #       docker-compose -f /root/var/www/gimmerecipes1/docker-compose.yaml down --remove-orphans
-      #       docker system prune -af --volumes
-
-
-
-      # - name: Deploy to Digital Ocean
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.DIGITALOCEAN_DROPLET_IP }}
-      #     username: root
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     script: |
-      #       export MONGO_URI="${{ secrets.MONGO_URI }}"
-      #       export SPOON_SECRET="${{ secrets.SPOON_SECRET }}"
-      #       export FLASK_SECRET_KEY="${{secrets.FLASK_SECRET_KEY}}"
-      #       cd /root/var/www/gimmerecipes1/
-      #       docker-compose pull
-      #       docker-compose down --remove-orphans
-      #       docker container prune -f
-      #       docker image prune -f
-      #       docker volume prune -f
-      #       docker-compose up -d
-      #       docker-compose logs
-      
       - name: Deploy to Digital Ocean
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.DIGITALOCEAN_HOST }}
-          username: ${{ secrets.DIGITALOCEAN_USERNAME }}
-          password: ${{ secrets.DIGITALOCEAN_PASSWORD }}
+          host: ${{ secrets.DIGITALOCEAN_DROPLET_IP }}
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             export MONGO_URI="${{ secrets.MONGO_URI }}"
             export SPOON_SECRET="${{ secrets.SPOON_SECRET }}"
