--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -78,8 +78,9 @@ jobs:
             export SPOON_SECRET="${{ secrets.SPOON_SECRET }}"
             export FLASK_SECRET_KEY="${{secrets.FLASK_SECRET_KEY}}"
             cd /root/var/www/gimmerecipes1/
-            docker pull js11692/gimme_recipes:latest
-            docker stop gimme_recipes || true
-            docker rm gimme_recipes || true
-            docker run -d --name gimme_recipes -p 80:5000 js11692/gimme_recipes:latest
-
+            docker-compose pull
+            docker-compose down --remove-orphans
+            docker container prune -f
+            docker image prune -f
+            docker volume prune -f
+            docker-compose up -d
