--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -66,6 +66,16 @@ jobs:
           username: root
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: ls -alh /root/var/www/gimmerecipes1/
+
+      - name: Clean up Docker environment
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DIGITALOCEAN_DROPLET_IP }}
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            docker-compose -f /root/var/www/gimmerecipes1/docker-compose.yaml down --remove-orphans
+            docker system prune -af --volumes
       
       - name: Deploy to Digital Ocean
         uses: appleboy/ssh-action@master
