added mongo docker

--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -39,10 +39,10 @@ jobs:
           docker push js11692/gimme_recipes:latest
 
 
-      # - name: Build and Push MongoDB image (to Docker Hub)
-      #   run: |
-      #     docker build -f mongodb/Dockerfile -t js11692/mongodb:latest ./mongodb
-      #     docker push js11692/mongodb:latest
+      - name: Build and Push MongoDB image (to Docker Hub)
+        run: |
+          docker build -f mongodb/Dockerfile -t js11692/mongodb:latest ./mongodb
+          docker push js11692/mongodb:latest
 
       - name: List files in the GitHub Actions workspace
         run: ls -alh $GITHUB_WORKSPACE
