--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -74,6 +74,10 @@ jobs:
           username: root
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            export MONGO_URI="${{ secrets.MONGO_URI }}"
+            export SPOON_SECRET="${{ secrets.SPOON_SECRET }}"
+            export FLASK_SECRET_KEY="${{secrets.FLASK_SECRET_KEY}}"
+            cd /root/var/www/gimmerecipes1/
             docker-compose -f /root/var/www/gimmerecipes1/docker-compose.yaml down || true
             docker stop $(docker ps -aq) || true
             docker rm $(docker ps -aq) || true
@@ -94,5 +98,7 @@ jobs:
             cd /root/var/www/gimmerecipes1/
             docker-compose pull
             docker-compose down --remove-orphans
-            docker system prune -af --volumes
+            docker container prune -f
+            docker image prune -f
+            docker volume prune -f
             docker-compose up -d
