--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -77,10 +77,9 @@ jobs:
             export MONGO_URI="${{ secrets.MONGO_URI }}"
             export SPOON_SECRET="${{ secrets.SPOON_SECRET }}"
             export FLASK_SECRET_KEY="${{secrets.FLASK_SECRET_KEY}}"
-            cd /root/var/www/gimmerecipes1/
             docker-compose -f /root/var/www/gimmerecipes1/docker-compose.yaml down || true
             docker stop $(docker ps -aq) || true
-            docker rm $(docker ps -aq) || true
+            docker rm -f $(docker ps -aq) || true
             docker-compose -f /root/var/www/gimmerecipes1/docker-compose.yaml down --remove-orphans
             docker system prune -af --volumes
 
@@ -96,9 +95,4 @@ jobs:
             export SPOON_SECRET="${{ secrets.SPOON_SECRET }}"
             export FLASK_SECRET_KEY="${{secrets.FLASK_SECRET_KEY}}"
             cd /root/var/www/gimmerecipes1/
-            docker-compose pull
-            docker-compose down --remove-orphans
-            docker container prune -f
-            docker image prune -f
-            docker volume prune -f
             docker-compose up -d
